Table user {
  id uuid [pk]
  role int [not null]
  display_name varchar
  first_name varchar
  second_name varchar
  last_name varchar
  is_active boolean [default: true]
  default_time_zone_id uuid [ref: > time_zone.id, null]
  created_at timestamp [not null, default: `now()`]
  created_by uuid [null]
  updated_at timestamp [not null, default: `now()`]
  updated_by uuid [null]
  deleted_at timestamp [null]
  deleted_by uuid [null]
  is_deleted bool [not null]
}

Enum auth_provider_type {
  email
  telegram
  OAuth2
  Google
  github
  Apple
}

Table user_identity {
  id uuid [pk]
  user_id uuid [not null, ref: > user.id]
  provider auth_provider_type [not null] 
  identifier text [not null] // email, telegramId, OAut2 ID etc...
  password_hash text // only used for password-based providers (e.g. 'email')
  is_confirmed boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

    indexes {
    (provider, identifier) [unique]
  }
}

Table user_role {
  id uuid [pk]
  user_id uuid [not null, ref: > user.id] 
  role_id uuid [not null, ref: > role.id]
  indexes {
    (user_id)
    (role_id)
  }
}

Table role {
  id uuid [pk]
  name varchar(256) [not null] 
  is_active bool [not null]
  is_default bool [not null]
  claims jsonb [not null]
  created_at timestamp [not null, default: `now()`]
  created_by uuid [null]
  updated_at timestamp [not null, default: `now()`]
  updated_by uuid [null]
  deleted_at timestamp [null]
  deleted_by uuid [null]
  is_deleted bool [not null]
  indexes {
    (name) [unique]
  }
}


Table refresh_token {
  id uuid [pk]
  user_id uuid [not null, ref: > user.id]
  token_hash text [not null]
  expires_at timestamp [not null]
  is_revoked boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  revoked_at timestamp [null]
  last_used_at timestamp [null]
  
  indexes {
    (token_hash) [unique]
    (user_id)
    (expires_at)
  }
}

Table time_zone {
  id uuid [pk]
  iana_name varchar [not null, unique] // 'Europe/Moscow'
  display_name varchar [not null]
}

Table currency {
  id uuid [pk]
  name varchar [not null]
  char_code varchar [not null]
  num_code varchar [not null]
  sign varchar [null]
  emoji varchar [null]
  is_deleted bool [not null]
  indexes {
    (char_code) [unique]
    (num_code) [unique]
  }
}

Table exchange_rate {
  id uuid [pk]
  rate_date datetime [not null]
  currency_id uuid [ref: > currency.id, not null]
  rate decimal [not null]
  created_at timestamp [not null, default: `now()`]
}

Table country {
  id uuid [pk]
  name varchar [unique, not null]
  created_at timestamp [not null, default: `now()`]
}

Table bank {
  id uuid [pk]
  country_id uuid [ref: > country.id, not null]
  name varchar [not null]
  indexes {
    (country_id)
  }
}

Table account_type {
  id uuid [pk]
  code varchar [not null]
  description varchar [not null]
  is_deleted bool [not null]
  created_at timestamp [not null, default: `now()`]
  indexes {
    (code) [unique]
  }
}

Table account {
  id uuid [pk]
  user_id uuid [ref: > user.id, not null]
  account_type_id uuid [ref: > account_type.id, not null]
  currency_id uuid [ref: > currency.id, not null]
  bank_id uuid [ref: > bank.id, not null]
  name varchar [not null]
  credit_limit decimal [null]
  is_include_in_balance boolean [not null]
  is_default bool [not null]
  is_archived bool [not null]
  created_at timestamp [not null, default: `now()`]
  created_by uuid [null]
  updated_at timestamp [not null, default: `now()`]
  updated_by uuid [null]
  deleted_at timestamp [null]
  deleted_by uuid [null]
  is_deleted bool [not null]
  indexes {
    (account_type_id)
    (user_id, currency_id)
  }
}

Table category {
  id uuid [pk]
  parent_id uuid [ref: > category.id, null]
  user_id uuid [ref: > user.id, not null]
  name varchar [null]
  income boolean [not null]
  expense boolean [not null]
  emoji varchar [null]
  icon bytea [null]
  created_at timestamp [not null, default: `now()`]
  created_by uuid [null]
  updated_at timestamp [not null, default: `now()`]
  updated_by uuid [null]
  deleted_at timestamp [null]
  deleted_by uuid [null]
  is_deleted bool [not null]
  indexes {
    (user_id, income)
    (user_id, expense)
  }
}

Enum transaction_type {
  income
  expense
}

Table transaction {
  id uuid [pk]
  account_id uuid [ref: > account.id, not null]
  category_id uuid [ref: > category.id, not null]
  type transaction_type
  amount decimal [not null]
  date detetime [not null]
  description varchar [null]
  place varchar [null]
  transfer_id uuid [ref: > transfer.id]
  created_at timestamp [not null, default: `now()`]
}

Table transfer {
  id uuid [pk]
  from_account_id uuid [ref: > account.id, not null]
  to_account_id uuid [ref: > account.id, not null]
  from_amount decimal [not null]
  to_amount decimal [not null, note: "When the from-account and the to-account have a different currencies"]
  exchange_rate decimal [not null]
  description varchar [null]
  created_at timestamp [not null, default: `now()`]
}

Table tg_user {
  telegram_id bigint [not null, pk]
  user_id uuid
  role int [not null]
  last_active_timestamp timestamp [not null]
}

Table tg_user_state {
  telegram_user_id bigint [not null, pk, ref: > tg_user.telegram_id]
  state_id uuid [not null, pk, ref: > tg_state.id]
  context json
}

Table tg_state {
  id uuid [pk]
  name text
}